# mini-turret

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: error.rs  lib.rs
backend/src/cv/: mod.rs  vision.rs
ui/: Cargo.toml
ui/src/: app.rs  error.rs  main.rs
