[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.26", features = ["wgpu", "persistence"] }
egui_dock = "0.11"
egui_extras = "0.26"
serde = { version = "1", features = ["derive"] }

thiserror.workspace = true
backend.workspace = true